# WARNING: head commit changed in the meantime
Merge branch 'master' of https://github.com/Emesall/spring-news-app.git